--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -9,7 +9,7 @@ jobs:
   hello:
     runs-on: ubuntu-latest
     steps:
-      - uses: khan/pull-request-comment-trigger@master
+      - uses: bucketplace/comment-trigger@main
         id: check
         with:
           trigger: '#hello'
@@ -19,7 +19,7 @@ jobs:
   eyes:
     runs-on: ubuntu-latest
     steps:
-      - uses: khan/pull-request-comment-trigger@master
+      - uses: bucketplace/comment-trigger@main
         id: check
         with:
           trigger: '#look'
@@ -32,7 +32,7 @@ jobs:
   rocket:
     runs-on: ubuntu-latest
     steps:
-      - uses: khan/pull-request-comment-trigger@master
+      - uses: bucketplace/comment-trigger@main
         id: check
         with:
           trigger: '#deploy'
