--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -13,7 +13,7 @@ jobs:
         id: check
         with:
           trigger: '#hello'
-      - run: 'echo Found it!'
+      - run: 'echo Found it! args: ${{ steps.check.outputs.extra_args }}'
         if: steps.check.outputs.triggered == 'true'
 
   eyes:
@@ -26,7 +26,7 @@ jobs:
           reaction: eyes
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
-      - run: 'echo Found it!'
+      - run: 'echo Found it! args: ${{ steps.check.outputs.extra_args }}'
         if: steps.check.outputs.triggered == 'true'
 
   rocket:
@@ -39,5 +39,5 @@ jobs:
           reaction: rocket
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
-      - run: 'echo Found it!'
+      - run: 'echo Found it! args: ${{ steps.check.outputs.extra_args }}'
         if: steps.check.outputs.triggered == 'true'
